<resources>
    <string name="app_name">UpnaDepor</string>
    <string name="title_activity_main">UpnaDepor</string>
    <string name="title_web_view">Visor Web</string>

    <!-- String relacionados con el TabbedActivity -->
    <string name="tab_text_1">Lunes</string>
    <string name="tab_text_2">Martes</string>
    <string name="tab_text_3">Miércoles</string>
    <string name="tab_text_4">Jueves</string>
    <string name="tab_text_5">Viernes</string>

    <!-- Strings relacionados con LoginActivity y RegistroActivity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_carrera">Selecciona una carrera</string>
    <string name="prompt_nombre_completo">Nombre completo</string>
    <string name="prompt_fecha_nacimineto">Fecha de nacimiento</string>
    <string name="prompt_email_registro">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_repetir">Vuelva a introducir la contraseña</string>
    <string name="action_log_in">Entrar</string>
    <string name="action_register">Registrarse</string>
    <string name="mensajeNoRegistrado">¿No estás registrado? ¡Regístrate ahora!</string>
    <string name="welcome">¡Bienvenido de nuevo! "</string>
    <string name="invalid_password_length">La contraseña debe tener >5 caracteres</string>
    <string name="invalid_password_length_registro">Las contraseñas deben tener >5 caracteres</string>
    <string name="invalid_password_equality">Las contraseñas no coinciden</string>
    <string name="invalid_password_values">Las contraseñas no contienen valores válidos</string>
    <string name="invalid_fecha_nacimiento_registro">Fecha inválida</string>
    <string name="invalid_carrera_registro">Es obligatorio seleccionar una carrera</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_sex_registro">Es obligatorio seleccionar un sexo</string>
    <string name="invalid_nombre_completo">Nombre completo inválido</string>
    <string name="login_failed">"Login incorrecto"</string>
    <string name="register_failed">"Registro incorrecto"</string>
    <string name="checkbox">CheckBox</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="hora">hora</string>
    <string name="actividad">actividad</string>
    <string name="titulo_inicio_sesion">Iniciar sesión en</string>
    <string name="titulo_formulario_registro">Formulario de registro</string>


    <!-- Strings de AlertDialog para llamar a la reserva del WebView -->
    <string name="tituloDialog">Reservar</string>
    <string name="preguntaDialog">¿Seguro que quiere reservar la actividad?</string>
    <string name="siDialog">Sí</string>
    <string name="noDialog">No</string>


</resources>
